# aa-server

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  armies.rs  docker-compose-base.yml  docker-compose-db.yml  docker-compose-dev-local.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  nation_armies.rs  prelude.rs  schema_design.drawio
.github/: dependabot.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/controller/: nation.rs
api/src/handlers/: armies.rs  battles.rs  campaign.rs  game.rs  kingdom.rs  mod.rs  nation.rs  users.rs
api/src/handlers/battles/: mod.rs  run_battle.rs  run_test_battle.rs
api/src/middleware/: auth.rs
api/src/routes/: armies.rs  battles.rs  campaign.rs  game.rs  kingdom.rs  mod.rs  nation.rs  users.rs
api/src/types/: game_defaults.rs  mod.rs
api/src/utils/: error.rs  validate_identity.rs
entity/: Cargo.toml
entity/src/: aoe_spread.rs  armies.rs  battles.rs  campaign_levels.rs  lib.rs  mod.rs  nation_armies.rs  nation_campaign_levels.rs  nations.rs  prelude.rs  trait_implementations.rs  users.rs  weapon_armor.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230623_232009_update_shield_rating.rs  m20230624_132859_add_monk.rs  m20230624_140621_add_imperial_legionnaire.rs  m20230628_142201_north_glade_longbow_men.rs  m20230701_171647_attribute_fixes.rs  m20230701_180327_insert_remaining_armies.rs  m20230709_184100_col_change_pad_change.rs  m20230709_185756_size_col_name_change.rs  m20230813_144846_aoe_support.rs  m20230814_134648_switch_attack_speed.rs  m20230830_133912_add_nation_table.rs  m20230830_140228_add_unique_name_constraint.rs  m20230830_140229_add_nation_armies_table.rs  m20230830_140229_add_unique_name_table_constraint.rs  m20230830_140230_add_nation_armies_table.rs  m20230923_140246_add_user_table.rs  m20230923_143157_update_nation_table_user_fk.rs  m20230924_233249_add_unique_sub_constraint.rs  m20230924_233539_add_unique_sub_table_constraint.rs  m20231024_131717_change_shinobi_name.rs  m20231024_132726_insert_remaining_armies.rs  m20231025_135151_update_old_armies_with_defaults.rs  m20231107_133838_insert_initial_nations.rs  m20231107_134927_insert_initial_nation_armies.rs  m20231114_145034_add_gold_column.rs  m20231118_182739_add_gold_to_nation.rs  m20231124_144641_add_battles_table.rs  m20231125_175020_add_is_npc.rs  m20231125_180001_add_campaign_level.rs  m20231125_213302_add_unique_nation_name_constraint.rs  m20231125_214149_add_campaign_levels_table.rs  m20231125_223357_add_nation_campaign_levels_table.rs  m20231125_225246_add_nation_campaign_level_to_battles_table.rs  m20231126_144923_add_campaign_nations.rs  m20231126_195724_add_campaign_armies.rs  m20231203_211014_add_campaign_levels.rs  m20231210_154718_add_lore_col_to_campaign_levels.rs  m20240204_203833_add_update_procedure.rs  (+22 more)
service/: Cargo.toml
service/src/: army_service.rs  battles_service.rs  campaign_service.rs  cron_service.rs  external_requests.rs  initialization_service.rs  lib.rs  nation_service.rs  user_service.rs
service/src/types/: types.rs
src/: main.rs
