[package]
name = "armies_of_avalon"
version = "0.1.0"
authors = ["Bryson Kruk <brysonkruk@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
armies-of-avalon-api = { path = "api" }