[package]
name = "armies-of-avalon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armies-of-avalon-service = { path = "../service" }
tokio = { version = "1.28.2", features = ["full"] }
axum = { version = "0.7", features = ['macros']}
axum-extra = { version = "0.9.1", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.1"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = { version = "1.0.164"} 
serde_json = "1.0.99"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
aa-battles = {path = "../../aa-battles"}
