[package]
name = "armies-of-avalon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armies-of-avalon-service = { path = "../service" }
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ['macros']}
axum-extra = { version = "0.9.1", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower-cookies = "0.10.0"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = { version = "1.0.164"} 
serde_json = "1.0.133"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
#aa-battles = {path = "../../aa-battles"}
aa-battles = { git = "https://github.com/Brysonmk1984/aa-battles" }
jsonwebtoken = "9.2.0"
tracing = "0.1.40"
