[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
#aa-battles = {path = "../../aa-battles"}
aa-battles = { git = "https://github.com/Brysonmk1984/aa-battles" }
num-traits = "0.2.17"
rust_decimal_macros = "1.36"
sea-orm = { version = "1.0.1", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }


