[package]
name = "armies-of-avalon-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
entity = { path = "../entity" }
reqwest = { version = "0.11.23", features = ["json"]}
serde = "1.0.188"
serde_json = "1.0.107"
tokio-cron-scheduler = "0.10.0"

[dependencies.sea-orm]
version = "0.12.0-rc.3" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

