[package]
name = "armies-of-avalon-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
entity = { path = "../entity" }
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"]}
serde = "1.0.188"
serde_json = "1.0.127"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio-cron-scheduler = "0.10.0"

[dependencies.sea-orm]
version = "1.0.1"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt"] }

